tests/NormalTests/paczka1/fuzzy1/46563460.err
Error in line 6: 4inE6sa4g1 A923 3,5
Error in line 9: e4dLF0dG4 A923 263,9
Error in line 11: DK9B1j A441 53,3
Error in line 8: 4inE6sa4g1 S449 13,3
Error in line 14: A923 S449 86,3
Error in line 26: K0sAHQlVX S449 23,7
Error in line 36: K0sAHQlVX A441 30,7
Error in line 37: K0sAHQlVX S449 100,0
